# tmux-deck

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tmux_board/: __init__.py  __main__.py  app.py
src/tmux_deck/: __init__.py  __main__.py  app.py
