[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmux-deck"
version = "0.2.0"
description = "A sleek interactive grid of your tmux sessions — project status at a glance, jump in with a keystroke."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "bdepyzy", email = "obo.dan87@gmail.com" }]
keywords = ["tmux", "tui", "curses", "sessions", "terminal", "dashboard"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Topic :: Terminals",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/bdepyzy/tmux-deck"
Issues = "https://github.com/bdepyzy/tmux-deck/issues"

[project.scripts]
tmux-deck = "tmux_deck.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tmux_deck"]
